[package]
name = "gk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.83"
serde_json = "1.0"
js-sys = "0.3.60"
gloo-events = "0.1.2"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Element", 
    "EventTarget",
    "HtmlElement", 
    "Node",

    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",

    "File",
    "Blob",
    "ReadableStream"
]